# Swaggo/docs/swagger.json
@@ -12,7 +12,37 @@
     },
     "host": "localhost:4000",
     "basePath": "/v1",
-    "paths": {},
+    "paths": {
+        "/orders": {
+            "get": {
+                "description": "Get All orders in detail",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "order"
+                ],
+                "summary": "Get All Orders",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/views.GetOrderSuccess"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/views.GetOrderFailedNotFound"
+                        }
+                    }
+                }
+            }
+        }
+    },
     "definitions": {
         "models.Order": {
             "type": "object",
@@ -21,16 +51,33 @@
                     "type": "string"
                 },
                 "customerName": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "MNC GOLANG LESSON"
                 },
                 "id": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 1
                 },
                 "productsId": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 1
                 },
                 "userId": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 1
+                }
+            }
+        },
+        "views.GetOrderFailedNotFound": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string",
+                    "example": "GET_NOT_FOUND"
+                },
+                "status": {
+                    "type": "integer",
+                    "example": 404
                 }
             }
         },
